Fixed some style wrapping.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,24 +26,26 @@ aside a, aside a:visited {
    News Article Display
    ====================
 */
+#news_articles {
+  display: block;
+}
 #news_articles article {
   display: inline-block;
-  width: 260px;
-  height: 130px;
-  overflow: hidden;
+  float: left;
+  width: 305px;
   padding: 5px;
   margin-bottom: 15px;
   margin-right: 15px;
 }
 #news_articles article img {
   float: left;
-  margin-right: 20px;
+  margin-right: 15px;
   border: 1px solid #404040;
 }
 #news_articles article a {
   text-decoration: none;
   width: 275px;
-  font-size: 90%;
+  font-size: .9em;
   color: #8b8989;
 }
 #news_articles article p {
@@ -161,7 +163,7 @@ nav a:hover{
     padding: 0px 2% 10px;
 }
 #main.with_aside #main_section {
-    width: 64%;
+    width: 675px;
     }
 #footer-container footer{
 	color:white;
@@ -318,6 +320,7 @@ nav a:hover{
 .visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
 .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
 .invisible { visibility: hidden; }
+.clearfix { clear: both;}
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
